stderr
JudgeMan.java:10: error: <identifier> expected
        System.out.print(intArray.[0]);
                                  ^
1 error
